# MLOPS-2-RC-digitalocean

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: app.py  schema.py
artifacts/: classification_report.txt  metrics.json
artifacts/registry/: latest.json
configs/: data.yaml  model_m1.yaml  model_m2.yaml  preprocess.yaml  train.yaml
data/processed/: metadata.csv  metadata_features.csv  product2id.json  qty2id.json
src/slu/: data_ingest.py  eda.py  evaluate.py  hparam_search.py  monitor_report.py  preprocess.py  registry.py  train.py
src/slu/models/: m1_cnn_transformer.py  m2_transformer_tiny.py
tests/: test_labelmap.py  test_preprocess.py  test_smoke_train.py
